Rule34 Fixed content getting squished

--- a/Stylus/rule34.xxx/Image Within Viewport.user.css
+++ b/Stylus/rule34.xxx/Image Within Viewport.user.css
@@ -11,5 +11,6 @@
     #image,
     #gelcomVideoContainer > * > video {
         max-width: 100%;
+        height: auto;
     }
 }
